[package]
name = "sshync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9"
anyhow = "1.0.75"
fast_rsync = "0.2.0"
bytes = "1.4.0"
log = "0.4.20"
env_logger = "0.10.0"
bincode = "1.3.3"
serde = { verson = "1.0.188", features = ["derive"] }
chrono = "0.4.30"

[dev-dependencies]
assert_cmd = "2.0.12"
test-files = "0.1.0"
